source/stylesheets/_asciidoc.scss
/* ... */
@media #{$medium} {
  body.toc2 {
    padding-left: 20em;
    padding-right: 0;
  }

  #toc.toc2 {
    width: 20em;

    #toctitle {
      font-size: 1.375em;
    }

    & > ul {
      font-size: 0.95em;
    }

    ul ul {
      padding-left: $list-nested-margin;
    }
  }

  body.toc2.toc-right {
    padding-left: 0;
    padding-right: 20em;
  }
}

// toc within content
#content #toc {
  @include panel($panel-bg, $panel-padding, false);
  //border-color: $panel-border-color;
  @include radius;
}

#footer {
  max-width: 100%;
  //margin-top: $panel-margin-bottom * 2;
  background-color: $footer-bg;
  padding: $panel-padding;
}

#footer-text {
  color: $footer-font-color;
  line-height: $paragraph-line-height * 0.9;
}

.sect1 {
  // reduce padding below small breakpoint to match header font size change
  padding-bottom: $panel-margin-bottom - em-calc(10);
}

@media #{$small} {
  .sect1 {
    padding-bottom: $panel-margin-bottom;
  }
}

.sect1 + .sect1 {
  border-top: $sect-divider-size $sect-divider-style $sect-divider-color;
}

// QUESTION why #content here?
#content #{headers()} {
  & > a.anchor {
    position: absolute;
    z-index: 1001;
    width: 1.2em;
    margin-left: -1.2em;
    display: block;
    text-decoration: none !important;
    color: transparent;
    text-align: center;
    font-weight: normal;

    &:before {
      content: "#";
      display: block;
    }
  }

  &:hover > a.anchor,
  & > a.anchor:hover {
    color: $anchor-font-color;
  }

  & > a.link {
    color: $header-font-color;
    text-decoration: none;
    &:hover {
      color: darken($header-font-color, 5%);
    }
  }
}

// AsciiDoc block styles

// these blocks that don't inherit panel styles
.audioblock,
.imageblock,
.literalblock,
.listingblock,
.stemblock,
.videoblock {
  margin-bottom: $panel-margin-bottom;
}

.admonitionblock td.content,
.audioblock,
.exampleblock,
.imageblock,
.listingblock,
.literalblock,
.stemblock,
.openblock,
.paragraph,
.quoteblock,
table.tableblock,
.verseblock,
.videoblock,
.dlist,
.olist,
.ulist,
.qlist,
.hdlist {
  & > .title {
    @extend %subheader;
    text-rendering: $subheader-text-rendering;
    text-align: left;
    @if $subheader-font-family {
      font-family: $subheader-font-family;
    }
    @if $subheader-font-size {
      font-size: $subheader-font-size;
    }
    @if $subheader-font-style {
      font-style: $subheader-font-style;
    }
  }
}

// trick to prevent wrapping? wat? why not max-width: 100%?
table.tableblock > caption.title {
  white-space: nowrap;
  overflow: visible;
  max-width: 0;
}

.paragraph.lead > p,
#preamble > .sectionbody > .paragraph:first-of-type p {
  @extend %lead;
  color: $title-font-color;
  // QUESTION remove or reduce letter-spacing?
}

// nested AsciiDoc document (should put "nested" class on surrounding div)
table.tableblock #preamble > .sectionbody > .paragraph:first-of-type p {
  font-size: inherit;
}

.admonitionblock > table {
  border-collapse: separate;
  border: 0;
  background: none;
  width: 100%;
  td.icon {
    text-align: center;
    // FIXME use ems!
    width: 80px;
    img {
      max-width: initial;
    }
    .title {
      //font-weight: $header-font-weight;
      font-weight: bold;
      font-family: $header-font-family;
      text-transform: uppercase;
    }
  }

  td.content {
    padding-left: emCalc(18px);
    padding-right: emCalc(20px);
    border-left: $hr-border-width $hr-border-style $hr-border-color;
    // FIXME use $aside-font-color
    color: $blockquote-cite-font-color;
    // QUESTION use opacity instead of blockquote-cite-font-color?
    //opacity: 0.75;

    //& > .paragraph:last-child > p {
    & > :last-child > :last-child {
      margin-bottom: 0;
    }
  }
}

.exampleblock > .content {
  // FIXME add variable for $example-bg
  @include panel($body-bg, $panel-padding, false);
  @include radius;
  //& > :last-child > :last-child,
  //// argh, review!
  //.olist > ol > li:last-child > :last-child,
  //.ulist > ul > li:last-child > :last-child,
  //.qlist > ol > li:last-child > :last-child {
  //  margin-bottom: 0;
  //}
}

.sidebarblock {
  @include panel($panel-bg, $panel-padding, false);
  @include radius;

  & > .content {
    & > .title {
      @extend h3;
      color: $subheader-font-color;
      //color: darken($header-font-color, 15%); // name this panel-header-color?
      //line-height: 1.45; // a touch up from the header line height
      margin-top: 0;
      @if $sidebar-header-align {
        text-align: $sidebar-header-align;
      }
      @if $sidebar-header-border-size != 0 {
        border-width: $sidebar-header-border-size;
        border-style: $sidebar-header-border-style;
        border-color: $sidebar-header-border-color;
      }
    }
  }
}

.exampleblock > .content,
.sidebarblock > .content {
  // FIXME argh, review!
  & > :last-child > :last-child,
  .olist > ol > li:last-child > :last-child,
  .ulist > ul > li:last-child > :last-child,
  .qlist > ol > li:last-child > :last-child {
    margin-bottom: 0;
  }
}

// FIXME make this situation simpler
// we're trying to accomodate highlight themes that have background colors
// if "highlight" is in first position, then a source highlighter is not in use
.literalblock pre,
.listingblock pre:not(.highlight),
.listingblock pre[class="highlight"],
.listingblock pre[class^="highlight "],
.listingblock pre.CodeRay,
.listingblock pre.prettyprint {
  background: $pre-bg;

  .sidebarblock & {
    // FIXME make me a variable
    // FIXME what about inline code?
    //background: #ededef;
    background: #f2f1f1;
  }
}
/* ... */

